<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:orientation="vertical"
    tools:context="com.example.mybudget.MainActivity">

    <LinearLayout
        android:id="@+id/relativeLayout"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/createAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="40sp" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/emailPrompt"
            android:layout_gravity="center_horizontal"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/passwordPrompt"
            android:layout_gravity="center_horizontal"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/confirmPassword"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/confirmPasswordPrompt"
            android:layout_gravity="center_horizontal"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/buttonSignUp"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/register"
            android:background="@drawable/btn_signup"/>

        <TextView
            android:id="@+id/textViewLogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alreadyhaveLogin"
            android:textAlignment="center"
            android:layout_margin="15dp" />
    </LinearLayout>

</RelativeLayout>
